# Zcriterion

./: LICENSE  README.md  pyproject.toml
src/Zcriterion/: GeriMap.py  atomicPhysics.py  elements.json  plasma.py  runaway.py
src/Zcriterion/ADAS/: data.py  rates.py
