[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "Zcriterion"
version = "0.0.1"
authors = [
  { name="Björn Zaar", email="bjorn.zaar@hotmail.com" },
]
description = "This package contains an implementation of an analytic and a semi-analytic criterion that predicts whether a large runaway electron current can be expected in a tokamak device"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/chalmersplasmatheory/Zcriterion"
Issues = "https://github.com/chalmersplasmatheory/Zcriterion/issues"